added several entries

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -215,7 +215,7 @@
 
 @Article{Adams2018a,
   author    = {Adams, C. R.},
-  title     = {Uncomfortable Truths: Lifewriting, Trauma and Survivance in Marlon James’s A Brief History of Seven Killings},
+  title     = {Uncomfortable Truths: Lifewriting, Trauma and Survivance in Marlon James's A Brief History of Seven Killings},
   journal   = {Journal of West Indian Literature},
   year      = {2018},
   volume    = {26},
@@ -877,6 +877,17 @@
   timestamp = {2019.08.18},
 }
 
+@InProceedings{Alhazmi2016,
+  author    = {Alhazmi, H. and Gokhale, S. S.},
+  title     = {Mining Social Capital on Online Social Networks with Strong and Weak Ties},
+  booktitle = {2nd International Conference on Open and Big Data},
+  year      = {2016},
+  pages     = {9-16},
+  doi       = {10.1109/obd.2016.9},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @InProceedings{Ali2007,
   author    = {Ali, S. and Basharat, A. and Shah, M.},
   title     = {Chaotic Invariants for Human Action Recognition},
@@ -1013,6 +1024,19 @@
   doi       = {10.1371/journal.pone.0085777},
   owner     = {Vincent},
   timestamp = {2020.01.05},
+}
+
+@Article{Altafini2012,
+  author    = {Altafini, C.},
+  title     = {Dynamics of Opinion Forming in Structurally Balanced Social Networks},
+  journal   = {PLoS ONE},
+  year      = {2012},
+  volume    = {7},
+  number    = {6},
+  pages     = {e38135},
+  doi       = {10.1371/journal.pone.0038135},
+  owner     = {Vincent},
+  timestamp = {2015.11.04},
 }
 
 @Book{Alter2008,
@@ -7510,6 +7534,19 @@
   timestamp = {2013.07.30},
 }
 
+@InCollection{Craig2014,
+  author    = {Craig, H. and Greatley-Hirsch, B.},
+  title     = {Mingled Yarn’: The state of computing in shakespeare 2.0},
+  booktitle = {The Shakespearean International Yearbook},
+  publisher = {Taylor \& Francis},
+  year      = {2014},
+  volume    = {14},
+  pages     = {3-35},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://www.taylorfrancis.com/chapters/edit/10.4324/9781315264226-1/mingled-yarn-state-computing-shakespeare-2-0-brett-hirsch-hugh-craig},
+}
+
 @Article{Crane2006,
   author    = {Crane, G.},
   title     = {What Do You Do with a Million Books?},
@@ -8404,6 +8441,18 @@
   doi       = {10.1111/j.2517-6161.1977.tb01600.x},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Dennerlein2015,
+  author    = {Dennerlein, K.},
+  title     = {Measuring the average population densities of plays. A case study of Andreas Gryphius, Christian Weise and Gotthold Ephraim Lessing},
+  journal   = {Rivista di poesia comparata},
+  year      = {2015},
+  volume    = {53},
+  pages     = {80-88},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://scholar.google.de/scholar?cluster=18162056002573614343},
 }
 
 @Article{deNooy1991,
@@ -12027,6 +12076,17 @@
   timestamp = {2019.04.07},
 }
 
+@InProceedings{Gao2018,
+  author    = {Gao, J. and Galley, M. and Li, L.},
+  title     = {Neural Approaches to Conversational AI},
+  booktitle = {56th Annual Meeting of the Association for Computational Linguistics},
+  year      = {2018},
+  pages     = {2-7},
+  doi       = {10.18653/v1/p18-5002},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @Article{Garas2012,
   author    = {Garas, A. and Schweitzer, F. and Havlin, S.},
   title     = {A k-shell decomposition method for weighted networks},
@@ -15217,6 +15277,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.24},
 }
 
+@Article{Hope2010,
+  author    = {Hope, J. and Witmore, M.},
+  title     = {The hundredth psalm to the tune of ``green sleeves': Digital approaches to shakespeare's language of genre},
+  journal   = {Shakespeare Quarterly},
+  year      = {2010},
+  volume    = {61},
+  number    = {3},
+  pages     = {357-390},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://www.jstor.org/stable/40985589},
+}
+
 @InCollection{Horadam2014,
   author    = {Alzahrani, T. and Horadam, K. J.},
   title     = {Community Detection in Bipartite Networks: Algorithms and Case studies},
@@ -15435,6 +15508,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.25},
   url       = {https://arxiv.org/abs/2007.10937},
+}
+
+@Article{Huang2021b,
+  author    = {Huang, S. and Su, P.},
+  title     = {Social Networks, Identity Negotiation, and Segregated Integration in Hannah Lowe's Long Time No See},
+  journal   = {Caribbean Quarterly},
+  year      = {2021},
+  volume    = {67},
+  number    = {1-2},
+  pages     = {57-79},
+  doi       = {10.1080/00086495.2021.1926688},
+  owner     = {Vincent},
+  timestamp = {2021.06.15},
 }
 
 @Article{Hubert1985,
@@ -16120,6 +16206,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-319-47665-0_37},
   owner     = {Vincent},
   timestamp = {2020.01.03},
+}
+
+@InProceedings{Jassem2017,
+  author    = {Jassem, K. and Graliński, F. and Obrębski, T.},
+  title     = {Pros and Cons of Normalizing Text with Thrax},
+  booktitle = {8thLanguage and Technology Conference},
+  year      = {2017},
+  pages     = {230-235},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://re-research.pl/ltc-2017-iayko-jassem-gralinski-obrebski.pdf},
 }
 
 @InProceedings{Jayannavar2015,
@@ -17277,7 +17374,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @InCollection{Kidnie2004,
   author    = {Kidnie, M. J.},
-  title     = {The Staging of Shakespeare’s Drama in Print Editions},
+  title     = {The Staging of Shakespeare's Drama in Print Editions},
   booktitle = {Textual Performances},
   publisher = {Cambridge University Press},
   year      = {2004},
@@ -18179,6 +18276,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.29},
   url       = {https://aisel.aisnet.org/ecis2008/116/},
+}
+
+@InProceedings{Krautter2018,
+  author    = {Krautter, B.},
+  title     = {Quantitative microanalysis? different methods of digital drama analysis in comparison},
+  booktitle = {Digital Humanities},
+  year      = {2018},
+  pages     = {225-227},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://dh2018.adho.org/quantitative-microanalysis-different-methods-of-digital-drama-analysis-in-comparison/},
 }
 
 @Article{Krems2013,
@@ -19656,6 +19764,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url           = {http://ceur-ws.org/Vol-2653/paper2.pdf},
 }
 
+@Article{Lee2020i,
+  author    = {Lee, O-J. and Hong, H. and You, E.-S. and Kim, J.-T.},
+  title     = {Discovering Social Desires and Conflicts from Subculture Narrative Multimedia},
+  journal   = {Sustainability},
+  year      = {2020},
+  volume    = {12},
+  number    = {24},
+  pages     = {10241},
+  doi       = {10.3390su122410241},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @Article{Lee2021,
   author    = {Lee, O-J. and You, E.-S. and Kim, J.-T.},
   title     = {Plot Structure Decomposition in Narrative Multimedia by Analyzing Personalities of Fictional Characters},
@@ -20644,6 +20765,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-642-10467-1_84},
   owner     = {Vincent},
   timestamp = {2019.04.08},
+}
+
+@InProceedings{Lin2011,
+  author    = {Lin, I-M. and Hwang, Y.-C.},
+  title     = {Exploring the Social Network Relationships on Hostility Behaviors},
+  booktitle = {International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2011},
+  pages     = {667-671},
+  doi       = {10.1109/asonam.2011.83},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
 }
 
 @Book{Lin2012,
@@ -22540,7 +22672,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Book{McAlindon1991,
-  title     = {Shakespeare’s Tragic Cosmos},
+  title     = {Shakespeare's Tragic Cosmos},
   publisher = {Cambridge University Press},
   year      = {1991},
   author    = {McAlindon, T.},
@@ -24230,6 +24362,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://pdfs.semanticscholar.org/c35a/9a4073c5ef9ba99a38ff3540b8a4daf7f5f2.pdf},
 }
 
+@Article{Mueller2008,
+  author    = {Mueller, M.},
+  title     = {Digital Shakespeare, or towards a literary informatics},
+  journal   = {Shakespeare},
+  year      = {2008},
+  volume    = {4},
+  number    = {3},
+  pages     = {284-301},
+  doi       = {10.1080/17450910802295179},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @InProceedings{Muhuri2016,
   author    = {Muhuri, S. and Chakraborty, S. and Setua, S. K.},
   title     = {An Edge Contribution-Based Approach to Identify Influential Nodes from Online Social Networks},
@@ -24549,7 +24694,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Naldi2015,
   author    = {Naldi, M.},
-  title     = {Approximation of the truncated Zeta distribution and Zipf’s law. arXiv preprint series},
+  title     = {Approximation of the truncated Zeta distribution and Zipf's law. arXiv preprint series},
   journal   = {arXiv},
   year      = {2015},
   volume    = {stat.AP},
@@ -26712,6 +26857,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://mitpress.mit.edu/books/honest-signals},
 }
 
+@Article{Perer2006,
+  author    = {Perer, A. and Shneiderman, B.},
+  title     = {Balancing Systematic and Flexible Exploration of Social Networks},
+  journal   = {IEEE Transactions on Visualization and Computer Graphics},
+  year      = {2006},
+  volume    = {12},
+  number    = {5},
+  pages     = {693-700},
+  doi       = {10.1109/tvcg.2006.122},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @Article{PerezYPerez2001,
   author    = {Pérez Ý Pérez, R. and Sharples, Mike},
   title     = {{MEXICA}: A computer model of a cognitive account of creative writing},
@@ -27808,6 +27966,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://dl.acm.org/citation.cfm?id=1699639},
+}
+
+@InProceedings{Rahul2021,
+  author    = {{Rahul} and {Ayush} and Agarwal, D. and Vijay, D.},
+  title     = {Genre Classification using Character Networks},
+  booktitle = {5th International Conference on Intelligent Computing and Control Systems},
+  year      = {2021},
+  pages     = {216-222},
+  doi       = {10.1109/iciccs51141.2021.9432303},
+  owner     = {Vincent},
+  timestamp = {2021.06.01},
 }
 
 @Article{Rainville2006,
@@ -29119,6 +29288,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.29},
 }
 
+@InCollection{Romanska2014,
+  author    = {Romanska, M.},
+  title     = {Drametrics: what dramaturgs should learn from mathematicians},
+  booktitle = {The Routledge Companion to Dramaturgy},
+  publisher = {Routledge},
+  year      = {2014},
+  pages     = {472-481},
+  doi       = {10.4324/9780203075944-88},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @Article{Rommel1994,
   author    = {Rommel, T.},
   title     = {'So soft, so sweet, so delicately clear.' A Computer-assisted Analysis of Accumulated Words and Phrases in Lord Byron's Epic Poem Don Juan},
@@ -30255,6 +30436,50 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=1599081.1599179},
 }
 
+@InProceedings{Schmidt2018,
+  author    = {Schmidt, T. and Burghardt, M.},
+  title     = {An evaluation of lexicon-based sentiment analysis techniques for the plays of Gotthold Ephraim Lessing},
+  booktitle = {2nd Joint SIGHUM Workshop on Computational Linguistics for Cultural Heritage, Social Sciences, Humanities and Literature},
+  year      = {2018},
+  pages     = {139-149},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://www.aclweb.org/anthology/W18-4516/},
+}
+
+@InProceedings{Schmidt2018a,
+  author    = {Schmidt, T. and Burghardt, M.},
+  title     = {Toward a Tool for Sentiment Analysis for German Historic Plays},
+  booktitle = {Workshop on Computational Methods in the Humanities},
+  year      = {2018},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://epub.uni-regensburg.de/37575/},
+}
+
+@InProceedings{Schmidt2018b,
+  author    = {Schmidt, T. and Burghardt, M. and Dennerlein, K.},
+  title     = {Sentiment annotation of historic german plays: An empirical study on annotation behavior},
+  booktitle = {Annotation in Digital Humanities},
+  year      = {2018},
+  volume    = {2155},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {47-52},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {http://ceur-ws.org/Vol-2155/schmidt.pdf},
+}
+
+@InProceedings{Schmidt2019,
+  author    = {Schmidt, T. and Burghardt, M. and Dennerlein, K. and Wolff, C.},
+  title     = {Katharsis– A tool for computational drametrics},
+  booktitle = {Digital Humanities},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://dh-abstracts.library.cmu.edu/works/10056},
+}
+
 @InProceedings{Schmitt2009,
   author    = {Schmitt, D. T. and Kurkowski, S. H. and Mendenhall, M. J.},
   title     = {Building Social Networks in Persistent Video Surveillance},
@@ -30298,6 +30523,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {http://mildlyscientific.schochastics.net/2015/03/03/friends-and-hypergraphs-one-with-a/},
   owner        = {Vincent},
   timestamp    = {2018.11.11},
+}
+
+@Article{Schoech2017,
+  author    = {Schöch, C.},
+  title     = {Topic modeling genre: An exploration of French classical and enlightenment drama},
+  journal   = {Digital Humanities Quarterly},
+  year      = {2017},
+  volume    = {11},
+  number    = {2},
+  pages     = {266-285},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://arxiv.org/abs/2103.13019},
 }
 
 @InProceedings{Schoech2018,
@@ -31275,6 +31513,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Smeets2021,
+  author    = {Smeets, R. and De Pourcq, M. and van den Bosch, A.},
+  title     = {Modeling Conflict: Representations of Social Groups in Present-Day Dutch Literature},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2021},
+  volume    = {6},
+  pages     = {1-31},
+  doi       = {10.22148/001c.24722},
+  owner     = {Vincent},
+  timestamp = {2021.06.19},
+}
+
 @Book{Smiley2000,
   title     = {The Sagas of Icelanders: a Selection},
   publisher = {Penguin},
@@ -31563,6 +31813,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1063/1.4818544},
   owner     = {Vincent},
   timestamp = {2015.07.06},
+}
+
+@Article{Solaiman2019,
+  author    = {Solaiman, I. and Brundage, M. and Clark, J. and Askell, A. and Herbert-Voss, A. and Wu, J. and Radford, A. and Krueger, G. and Kim, J. W. and Kreps, S. and McCain, M. and Newhouse, A. and Blazakis, J. and McGuffie, K. and Wang, J.},
+  title     = {Release Strategies and the Social Impacts of Language Models},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CL},
+  pages     = {1908.09203},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {https://arxiv.org/abs/1908.09203},
 }
 
 @InCollection{Sole2003,
@@ -35914,6 +36176,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.08.12},
 }
 
+@InProceedings{Wolinski2012,
+  author    = {Woliński, M. and Miłkowski, M. and Ogrodniczuk, M. and Przepiórkowski, A. and Szałkiewicz, Ł.},
+  title     = {PoliMorf: a (not so) new open morphological dictionary for Polish},
+  booktitle = {8th International Conference on Language Resourcesand Evaluation},
+  year      = {2012},
+  pages     = {860-864},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {http://www.lrec-conf.org/proceedings/lrec2012/pdf/263_Paper.pdf},
+}
+
 @Book{Woloch2003,
   title     = {The One vs. the Many: Minor Characters and the Space of the Protagonist in the Novel},
   publisher = {Princeton University Press},
@@ -36587,6 +36860,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InProceedings{Yavuz2019,
+  author    = {Yavuz, M. C.},
+  title     = {Analyses of literary texts by using statistical inference methods},
+  booktitle = {6th Italian Conference on Computational Linguistics},
+  year      = {2019},
+  volume    = {2481},
+  series    = {CEUR Workshop Proceedings},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {http://ceur-ws.org/Vol-2481/paper75.pdf},
+}
+
 @InProceedings{Yavuz2020,
   author    = {Yavuz, M. C.},
   title     = {Analyses of Character Networks in Dramatic Works by Using Graphs},
@@ -36595,6 +36880,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/BESC51023.2020.9348328},
   owner     = {Vincent},
   timestamp = {2021.03.27},
+}
+
+@InProceedings{Yavuz2020a,
+  author    = {Yavuz, M. C.},
+  title     = {Analyses of characters in dramatic works by using document embeddings},
+  booktitle = {Digital Humanities and Natural Language Processing},
+  year      = {2020},
+  volume    = {2607},
+  pages     = {1-10},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+  url       = {http://ceur-ws.org/Vol-2607/paper1.pdf},
 }
 
 @Article{Yazdani2010,
@@ -36798,6 +37095,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url          = {https://www.teachengineering.org/activities/view/uno_graphtheory_lesson01_activity2},
   owner        = {Vincent},
   timestamp    = {2019.08.18},
+}
+
+@Article{Yu2008,
+  author    = {Yu, B.},
+  title     = {An evaluation of text classification methods for literary study},
+  journal   = {Literary and Linguistic Computing},
+  year      = {2008},
+  volume    = {23},
+  number    = {3},
+  pages     = {327-343},
+  doi       = {10.1093/llc/fqn015},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
 }
 
 @Article{Yu2009,
@@ -37179,6 +37489,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://cloudfront.escholarship.org/dist/prd/content/qt12h612c9/qt12h612c9.pdf},
+}
+
+@InProceedings{Zhang2012q,
+  author    = {Zhang, E. and Wang, G. and Gao, K. and Zhao, X. and Zhang, Y.},
+  title     = {Generalized Structural Holes Finding Algorithm by Bisection in Social Communities},
+  booktitle = {IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2012},
+  pages     = {276-279},
+  doi       = {10.1109/ICGEC.2012.98},
+  owner     = {Vincent},
+  timestamp = {2013.02.12},
 }
 
 @PhdThesis{Zhang2013,
@@ -37640,6 +37961,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/ICCV.2015.11},
   owner     = {Vincent},
   timestamp = {2019.06.27},
+}
+
+@Article{Zhu2017,
+  author    = {Zhu, J. and Liu, Y. and Yin, X.},
+  title     = {A New Structure-Hole-Based Algorithm For Influence Maximization in Large Online Social Networks},
+  journal   = {IEEE Access},
+  year      = {2017},
+  volume    = {5},
+  pages     = {23405-23412},
+  doi       = {10.1109/access.2017.2758353},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
 }
 
 @InProceedings{Zhu2019,
