--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -3458,6 +3458,18 @@
   url       = {https://tel.archives-ouvertes.fr/tel-01134481},
 }
 
+@Article{Bilis2021,
+  author    = {Bilis, H. and Mawhorter, P.},
+  title     = {Mapping Social Networks in La Princesse de Clèves: The `Commerce' of Lafayette's Court},
+  journal   = {French Studies},
+  year      = {2021},
+  volume    = {in press},
+  pages     = {knab036},
+  doi       = {10.1093/fs/knab036},
+  owner     = {Vincent},
+  timestamp = {2021.06.21},
+}
+
 @InProceedings{Billah2015,
   author    = {Billah, S. M. and Gauch, S.},
   title     = {Social network analysis for predicting emerging researchers},
@@ -7392,6 +7404,19 @@
   timestamp = {2020.07.23},
 }
 
+@Article{Corrales-Garay2019,
+  author    = {Corrales-Garay, D. and Ortiz-de-Urbina-Criado, M. and Mora-Valentín, E.-M.},
+  title     = {Knowledge areas, themes and future research on open data: A co-word analysis},
+  journal   = {Government Information Quarterly},
+  year      = {2019},
+  volume    = {36},
+  number    = {1},
+  pages     = {77-87},
+  doi       = {10.1016/j.giq.2018.10.008},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @Article{Correa2019,
   author    = {Corrêa, E. A. and Marinho, V. Q. and Amancio, D. R.},
   title     = {Semantic flow in language networks},
@@ -10509,6 +10534,30 @@
   groups    = {Dynamic Centrality},
   owner     = {Vincent},
   timestamp = {2020.07.20},
+}
+
+@Article{Fan2017a,
+  author    = {Fan, C. and Toriumi, F.},
+  title     = {High-Modularity Network Generation Model Based on the Muitilayer Network},
+  journal   = {Transactions of the Japanese Society for Artificial Intelligence},
+  year      = {2017},
+  volume    = {32},
+  number    = {6},
+  doi       = {10.1527/tjsai.B-H42},
+  owner     = {Vincent},
+  timestamp = {2017.11.04},
+}
+
+@Article{Fan2021,
+  author    = {Fan, C. and Li, Y.},
+  title     = {Coword and Cluster Analysis for the Romance of the Three Kingdoms},
+  journal   = {Wireless Communications and Mobile Computing},
+  year      = {2021},
+  volume    = {2021},
+  pages     = {5553635},
+  doi       = {10.1155/2021/5553635},
+  owner     = {Vincent},
+  timestamp = {2021.04.06},
 }
 
 @InProceedings{Fang2006,
@@ -15325,6 +15374,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.ucpress.edu/book/9780520221659/writing-the-character-centered-screenplay-updated-and-expanded-edition},
 }
 
+@InProceedings{Hotho2003,
+  author    = {Hotho, A. and Staab, S. and Stumme, G.},
+  title     = {WordNet improves text document clustering},
+  booktitle = {SIGIR Semantic Web Workshop},
+  year      = {2003},
+  pages     = {541-544},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+  url       = {https://www.kde.cs.uni-kassel.de/wp-content/uploads/hotho/pub/hothoetal_sigir_ws_sem_web.pdf},
+}
+
 @Article{Hou2012,
   author    = {Hou, X. and Harel, J. and Koch, C.},
   title     = {Image Signature: Highlighting Sparse Salient Regions},
@@ -15383,6 +15443,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.31},
   url       = {http://onlinebooks.library.upenn.edu/webbin/book/lookupid?key=olbp66783},
+}
+
+@Article{Hoz-Correa2018,
+  author    = {de la Hoz-Correa, A. and Muñoz-Leiva, F. and Bakucz, M.},
+  title     = {Past themes and future trends in medical tourism research: A co-word analysis},
+  journal   = {Tourism Management},
+  year      = {2018},
+  volume    = {65},
+  pages     = {200-211},
+  doi       = {10.1016/j.tourman.2017.10.001},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
 }
 
 @InProceedings{Hu2004,
@@ -15845,6 +15917,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.13},
   url       = {https://pdfs.semanticscholar.org/2388/660f2e3b2b3e9f87aaa38a4b45e085afea84.pdf},
+}
+
+@Article{Ishizaka2021,
+  author    = {Ishizaka, A. and Lokman, B. and Tasiou, M.},
+  title     = {A Stochastic Multi-criteria divisive hierarchical clustering algorithm},
+  journal   = {Omega},
+  year      = {2021},
+  volume    = {103},
+  pages     = {102370},
+  doi       = {10.1016/j.omega.2020.102370},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
 }
 
 @Electronic{Iuhfd2018,
@@ -21076,6 +21160,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.15},
 }
 
+@Article{Liu2021,
+  author    = {Liu, N. and Xu, Z. and Zeng, X.-J. and Ren, P.},
+  title     = {An agglomerative hierarchical clustering algorithm for linear ordinal rankings},
+  journal   = {Information Sciences},
+  year      = {2021},
+  volume    = {557},
+  pages     = {170-193},
+  doi       = {10.1016/j.ins.2020.12.056},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @InCollection{Loewenstein2018,
   author    = {Loewenstein, D.},
   title     = {Paradise Lost},
@@ -25326,6 +25422,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.13},
 }
 
+@Article{Nguyen2019a,
+  author    = {Nguyen, D.},
+  title     = {Mapping knowledge domains of non-biomedical modalities: A large-scale co-word analysis of literature 1987-2017},
+  journal   = {Social Science \& Medicine},
+  year      = {2019},
+  volume    = {233},
+  pages     = {1-12},
+  doi       = {10.1016/j.socscimed.2019.05.044},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @InProceedings{Niazi2016,
   author    = {Niazi, M. U. B. and Ozguler, A. B. and Yildiz, A.},
   title     = {Consensus as a Nash Equilibrium of a Dynamic Game},
@@ -28258,6 +28366,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1103/PhysRevE.67.026112},
   owner     = {Vincent},
   timestamp = {2010.09.14},
+}
+
+@Article{Ravikumar2014,
+  author    = {Ravikumar, S. and Agrahari, A. and Singh, S. N.},
+  title     = {Mapping the intellectual structure of scientometrics: a co-word analysis of the journal Scientometrics (2005-2010)},
+  journal   = {Scientometrics},
+  year      = {2014},
+  volume    = {102},
+  number    = {1},
+  pages     = {929-955},
+  doi       = {10.1007/s11192-014-1402-8},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
 }
 
 @InProceedings{Rder2015,
@@ -37864,6 +37985,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1501.04690},
 }
 
+@Article{Zhou2015a,
+  author    = {Zhou, Q. and Leydesdorff, L.},
+  title     = {The normalization of occurrence and Co-occurrence matrices in bibliometrics using Cosinesimilarities and Ochiai coefficients},
+  journal   = {Journal of the Association for Information Science and Technology},
+  year      = {2015},
+  volume    = {67},
+  number    = {11},
+  pages     = {2805-2814},
+  doi       = {10.1002/asi.23603},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @Article{Zhou2016,
   author    = {Zhou, Bolei and Khosla, Aditya and Lapedriza, Agata and Torralba, Antonio and Oliva, Aude},
   title     = {Places: An Image Database for Deep Scene Understanding},
@@ -37950,6 +38084,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1049/iet-spr.2011.0182},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Article{Zhu2012a,
+  author    = {Zhu, Q. and Peng, X. and Liu, X.},
+  title     = {Research topics in social computing area based on co-word analysis},
+  journal   = {Information Studies: Theory \& Application},
+  year      = {2012},
+  volume    = {12},
+  pages     = {7-11},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+  url       = {https://en.cnki.com.cn/Article_en/CJFDTotal-QBLL201212001.htm},
 }
 
 @InProceedings{Zhu2015,
