--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -5948,6 +5948,17 @@
   url         = {http://cs224d.stanford.edu/reports/ChagantyArun.pdf},
 }
 
+@InProceedings{Chakraborty2016,
+  author    = {Chakraborty, T. and Choudhury, P.},
+  title     = {Authorship identification in Bengali language: A graph based approach},
+  booktitle = {IEEE/ACM International Conference on Advances in Social Networks Analysis and Mining},
+  year      = {2016},
+  pages     = {443-446},
+  doi       = {10.1109/asonam.2016.7752272},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @Book{Chambers1959,
   title     = {Beowulf: An Introduction},
   publisher = {Cambridge University press},
@@ -18702,6 +18713,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.18},
 }
 
+@Article{Kumar2019,
+  author    = {Kumar, N. M. S.},
+  title     = {Implementation of artificial intelligence in imparting education and evaluating student performance},
+  journal   = {Journal of Artificial Intelligence},
+  year      = {2019},
+  volume    = {1},
+  number    = {1},
+  pages     = {1-9},
+  doi       = {10.36548/jaicn.2019.1.001},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+}
+
 @InProceedings{Kumaran2016,
   author    = {Kumaran, P. and Chitrakala, S.},
   title     = {Community formation based influence node selection for information diffusion in online social network},
@@ -21098,6 +21122,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s11704-016-6076-3},
   owner     = {Vincent},
   timestamp = {2019.06.27},
+}
+
+@Article{Liu2017b,
+  author    = {Liu, W. and Wang, Z. and Liu, X. and Zeng, N. and Liu, Y. and Alsaadi, F. E.},
+  title     = {A survey of deep neural network architectures and their applications},
+  journal   = {Neurocomputing},
+  year      = {2017},
+  volume    = {234},
+  pages     = {11-26},
+  doi       = {10.1016/j.neucom.2016.12.038},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
 }
 
 @Article{Liu2017d,
@@ -26837,6 +26873,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.10},
   url       = {https://arxiv.org/abs/1212.1478},
+}
+
+@Article{Pedregosa2011,
+  author    = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V. and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P. and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, É.},
+  title     = {Scikit-learn: Machine Learning in Python},
+  journal   = {Journal of Machine Learning Research},
+  year      = {2011},
+  volume    = {12},
+  number    = {85},
+  pages     = {2825-2830},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
+  url       = {https://www.jmlr.org/papers/v12/pedregosa11a.html},
 }
 
 @InProceedings{Peel2015,
@@ -37838,6 +37887,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/cse-euc.2017.137},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@Article{Zhao2020f,
+  author    = {Zhao, X. and Liang, X. and Tang, F. and Zhang, X. and Zhou, X. and Guo, X.},
+  title     = {Building Character Graphs and Dividing Communities in Chinese Novels Based on Graph Data Extraction: Community Division for Character Emotional Polarity Networks},
+  journal   = {IEEE Access},
+  year      = {2020},
+  volume    = {8},
+  pages     = {95559-95573},
+  doi       = {10.1109/access.2020.2995738},
+  owner     = {Vincent},
+  timestamp = {2021.06.23},
 }
 
 @InProceedings{Zheleva2009,
