--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1334,6 +1334,16 @@
   url       = {http://www.jstor.org/stable/2782154},
 }
 
+@Article{Anjana2016,
+  author    = {Anjana, B. K. and Bhambhra, R. L.},
+  title     = {Is literature the mirror of society},
+  journal   = {International Journal of English Language, Literature and Humanities},
+  year      = {2016},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://scholar.google.com/scholar?as_sdt=0%2C5&q=Is+literature+the+mirror+of+society&btnG=},
+}
+
 @Article{Antal2005,
   author    = {Antal, T. and Krapivsky, P. L. and Redner, S.},
   title     = {Dynamics of social balance on networks},
@@ -1670,6 +1680,16 @@
   doi       = {10.1007/978-1-4614-7163-9_315-1},
   owner     = {Vincent},
   timestamp = {2020.01.04},
+}
+
+@Book{Auerbach1946,
+  title     = {Mimesis: The representation of reality in Western Literature},
+  publisher = {Princeton University Press},
+  year      = {1946},
+  author    = {Auerbach, E.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/j.ctt3fgz26},
 }
 
 @InProceedings{Augereau2017,
@@ -2453,6 +2473,18 @@
   doi       = {10.1073/pnas.0400087101},
   owner     = {Vincent},
   timestamp = {2017.07.24},
+}
+
+@TechReport{Barrera2004,
+  author      = {Barrera, F. and Ibánez, A. M.},
+  title       = {Does violence reduce investment in education?: A theoretical and empirical approach},
+  institution = {Universidad de los Andes},
+  year        = {2004},
+  type        = {Technical Report},
+  number      = {002382},
+  owner       = {Vincent},
+  timestamp   = {2021.06.24},
+  url         = {https://ideas.repec.org/p/col/000089/002382.html},
 }
 
 @Article{Barroso2014,
@@ -3773,6 +3805,18 @@
   timestamp = {2010.06.03},
 }
 
+@Article{Bohn2014,
+  author    = {Bohn, A. and Buchta, C. and Hornik, K. and Mair, P.},
+  title     = {Making friends and communicating on Facebook: Implications for the access to social capital},
+  journal   = {Social Networks},
+  year      = {2014},
+  volume    = {37},
+  pages     = {29-41},
+  doi       = {10.1016/j.socnet.2013.11.003},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InProceedings{Bohnet2010,
   author    = {Bohnet, B.},
   title     = {Very High Accuracy and Fast Dependency Parsing is not a Contradiction},
@@ -4451,6 +4495,18 @@
   doi       = {10.18653/v1/d15-1075},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{Box-Steffensmeier2014,
+  author    = {Box-Steffensmeier, J. M. and Christenson, D. P.},
+  title     = {The evolution and formation of amicus curiae networks},
+  journal   = {Social Networks},
+  year      = {2014},
+  volume    = {36},
+  pages     = {82-96},
+  doi       = {10.1016/j.socnet.2012.07.003},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{boyd2007,
@@ -8168,6 +8224,19 @@
   timestamp = {2017.07.01},
 }
 
+@Article{Davis1967,
+  author    = {Davis, J. A.},
+  title     = {Clustering and structural balance in graphs},
+  journal   = {Human Relations},
+  year      = {1967},
+  volume    = {20},
+  number    = {2},
+  pages     = {181-187},
+  doi       = {10.1177/001872676702000207},
+  owner     = {Vincent},
+  timestamp = {2014.11.17},
+}
+
 @InProceedings{Davis2003,
   author    = {Davis, P. T. and Elson, D. K. and Klavans, J. L.},
   title     = {Methods for precise named entity matching in digital collections},
@@ -8272,6 +8341,19 @@
   doi       = {10.2307/2871419},
   owner     = {Vincent},
   timestamp = {2020.07.25},
+}
+
+@Article{Deijl2016,
+  author    = {van der Deijl, L. and Pieterse, S. and Prinse, M. and Smeets, R.},
+  title     = {Mapping the Demographic Landscape of Characters in Recent Dutch Prose: A Quantitative Approach to Literary Representation},
+  journal   = {Journal of Dutch Literature},
+  year      = {2016},
+  volume    = {7},
+  number    = {1},
+  pages     = {20-42},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://www.journalofdutchliterature.org/index.php/jdl/article/view/103},
 }
 
 @Article{deJesusHolanda2004,
@@ -8955,6 +9037,19 @@
   owner     = {Vincent},
   timestamp = {2020.03.17},
   url       = {https://www.taylorfrancis.com/books/e/9780203059500/chapters/10.4324/9780203059500-5},
+}
+
+@InCollection{Doreian2011,
+  author    = {Doreian, P.},
+  title     = {Signed networks},
+  booktitle = {Encyclopedia of social networks},
+  publisher = {SAGE Publications},
+  year      = {2011},
+  volume    = {1},
+  pages     = {777-777},
+  doi       = {10.4135/9781412994170.n320},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Article{Doreian2017,
@@ -11076,6 +11171,19 @@
   doi       = {10.1093/llc/fqv067},
   owner     = {Vincent},
   timestamp = {2019.06.24},
+}
+
+@Article{Finlayson2016,
+  author    = {Finlayson, M. A.},
+  title     = {Inferring Propp's Functions from Semantically Annotated Text},
+  journal   = {Journal of American Folklore},
+  year      = {2016},
+  volume    = {129},
+  number    = {511},
+  pages     = {55},
+  doi       = {10.5406/jamerfolk.129.511.0055},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Book{Finley1954,
@@ -13402,6 +13510,16 @@
   url       = {https://www.jstor.org/stable/24461922},
 }
 
+@Book{Greimas1966,
+  title     = {Sémantique structurale},
+  publisher = {Presse universitaires de France},
+  year      = {1966},
+  author    = {Greimas, A. J.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.cairn.info/semantique-structurale--9782130527633.htm},
+}
+
 @InCollection{Greimas1973,
   author    = {Greimas, A. J.},
   title     = {Les actants, les acteurs et les figures},
@@ -14788,6 +14906,18 @@
   url       = {http://research.microsoft.com/en-us/um/people/nath/docs/Henry_thesis_oct08.pdf},
 }
 
+@Article{Herman2000,
+  author    = {Herman, D.},
+  title     = {Narratology as a cognitive science},
+  journal   = {Image and Narrative},
+  year      = {2000},
+  volume    = {1},
+  number    = {1},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {http://www.imageandnarrative.be/inarchive/narratology/davidherman.htm},
+}
+
 @Book{Herman2003,
   title     = {Narrative Theory and the Cognitive Sciences},
   publisher = {University of Chicago Press},
@@ -15149,6 +15279,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1023/A:1007617005950},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@Article{Hoggart1966,
+  author    = {Hoggart, R.},
+  title     = {Literature and society},
+  journal   = {American Scholar},
+  year      = {1966},
+  volume    = {35},
+  number    = {2},
+  pages     = {277-289},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/41209369},
 }
 
 @Article{Holanda2017,
@@ -16210,6 +16353,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.11.30},
 }
 
+@Article{Jameson1975,
+  author    = {Jameson, F.},
+  title     = {Magical narratives: Romance as Genre},
+  journal   = {New Literary History},
+  year      = {1975},
+  volume    = {7},
+  number    = {1},
+  pages     = {135-163},
+  doi       = {10.2307/468283},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InCollection{Jameson2010,
   author    = {Jameson, F.},
   title     = {Afterword: A Note on Literary Realism},
@@ -17200,6 +17356,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/bf02289026},
   owner     = {Vincent},
   timestamp = {2017.07.15},
+}
+
+@Article{Katz1995,
+  author    = {Katz, T.},
+  title     = {Modernism, Subjectivity, and Narrative Form: Abstraction in ``The Waves''},
+  journal   = {Narrative},
+  year      = {1995},
+  volume    = {3},
+  number    = {3},
+  pages     = {232-251},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.jstor.org/stable/20107058},
 }
 
 @Article{Kazantseva2010,
@@ -18312,6 +18481,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1130/0091-7613(2003)031},
   owner     = {Vincent},
   timestamp = {2021.03.06},
+}
+
+@Article{Kraicer2019,
+  author    = {Kraicer, E. and Piper, A.},
+  title     = {Social Characters: The Hierarchy of Gender in Contemporary English-Language Fiction},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2019},
+  doi       = {10.22148/16.032},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @Book{Kranz2008,
@@ -21208,6 +21387,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.06.23},
 }
 
+@Article{Lochner2004,
+  author    = {Lochner, L. and Moretti, E.},
+  title     = {The Effect of Education on Crime: Evidence from Prison Inmates, Arrests, and Self-Reports},
+  journal   = {American Economic Review},
+  year      = {2004},
+  volume    = {94},
+  number    = {1},
+  pages     = {155-189},
+  doi       = {10.1257/000282804322970751},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
 @InCollection{Loewenstein2018,
   author    = {Loewenstein, D.},
   title     = {Paradise Lost},
@@ -23633,6 +23825,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner       = {Vincent},
   timestamp   = {2019.04.08},
   url         = {https://tminka.github.io/papers/dirichlet/},
+}
+
+@Article{Minnaard2010,
+  author    = {Minnaard, L.},
+  title     = {The Spectacle of an Intercultural Love Affair. Exoticm in Van Deyssel's Blank en Geel},
+  journal   = {Journal of Dutch Literature},
+  year      = {2010},
+  volume    = {1},
+  number    = {1},
+  pages     = {74-90},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.journalofdutchliterature.org/index.php/jdl/article/view/9},
 }
 
 @Book{Mintz2003,
@@ -26840,6 +27045,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.03},
 }
 
+@InCollection{Pattynama1998,
+  author    = {Pattynama, P.},
+  title     = {Secrets and Danger: Interracial Sexuality in Louis Couperus's The Hidden Force and Dutch Colonial Culture around 1900},
+  booktitle = {Domesticating the Empire. Race, Gender, and Family Life in French and Dutch Colonialism},
+  publisher = {University Press of Virginia},
+  year      = {1998},
+  pages     = {84-107},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://www.managementissues.com/index.php/specials/75-specials/988-secrets-and-danger-interracial-sexuality-in-louis-couperus-s-the-hidden-force-and-dutch-colonialism},
+}
+
 @Article{Paulus2017,
   author    = {Paulus, Romain and Xiong, Caiming and Socher, Richard},
   title     = {A Deep Reinforced Model for Abstractive Summarization},
@@ -27378,6 +27595,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.01.04},
   url       = {https://dh2017.adho.org/abstracts/103/103.pdf},
+}
+
+@Book{Piper2018,
+  title     = {Enumerations: data and literary study},
+  publisher = {University of Chicago Press},
+  year      = {2018},
+  author    = {Piper, A.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/E/bo28465405.html},
 }
 
 @Article{Pisinger1995,
@@ -31683,6 +31910,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.07},
 }
 
+@Article{Smeets2019,
+  author    = {Smeets, R. and Sanders, E. and van den Bosch, A.},
+  title     = {Character Centrality in Present-Day Dutch Literary Fiction},
+  journal   = {Digital Humanities Benelux Journal},
+  year      = {2019},
+  volume    = {1},
+  pages     = {71-90},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://pure.knaw.nl/portal/en/publications/character-centrality-in-present-day-dutch-literary-fiction},
+}
+
 @Article{Smeets2021,
   author    = {Smeets, R. and De Pourcq, M. and van den Bosch, A.},
   title     = {Modeling Conflict: Representations of Social Groups in Present-Day Dutch Literature},
@@ -33044,6 +33283,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1109/TCSS.2018.2822738},
   owner     = {Vincent},
   timestamp = {2018.05.10},
+}
+
+@Article{Tajfel1979,
+  author    = {Tajfel, H. and Turner, J. C. and Austin, W. G. and Worchel, S.},
+  title     = {An integrative theory of intergroup conflict},
+  journal   = {Organizational identity: A reader},
+  year      = {1979},
+  volume    = {56},
+  number    = {65},
+  pages     = {33},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://psycnet.apa.org/record/2001-01466-005},
 }
 
 @InProceedings{Takayama2012,
@@ -34523,6 +34775,26 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.08.21},
 }
 
+@Article{Underwood2018,
+  author    = {Underwood, T. and Bamman, D. and Lee, S.},
+  title     = {The Transformation of Gender in English-Language Fiction},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2018},
+  doi       = {10.22148/16.019},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+}
+
+@Book{Underwood2019,
+  title     = {Distant Horizons. Digital Evidence and Literary Change},
+  publisher = {University of Chicago Press},
+  year      = {2019},
+  author    = {Underwood, T.},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
+  url       = {https://press.uchicago.edu/ucp/books/book/chicago/D/bo35853783.html},
+}
+
 @Book{Uspensky1983,
   title     = {A Poetics of Composition: The Structure of the Artistic Text and Typology of a Compositional Form},
   publisher = {University of California Press},
@@ -35037,6 +35309,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.11},
   url       = {https://cmc.marmot.org/Record/.b2802400x},
+}
+
+@Article{Volker2020,
+  author    = {Volker, B. and Smeets, R.},
+  title     = {Imagined social structures: Mirrors or alternatives? A comparison between networks of characters in contemporary Dutch literature and networks of the population in the Netherlands},
+  journal   = {Poetics},
+  year      = {2020},
+  volume    = {79},
+  pages     = {101379},
+  doi       = {10.1016/j.poetic.2019.101379},
+  owner     = {Vincent},
+  timestamp = {2021.06.24},
 }
 
 @InProceedings{Volkova2010,
