--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -16596,6 +16596,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.colips.org/conferences/ialp2020/proceedings/papers/IALP2020_P46.pdf},
 }
 
+@Article{Jia2020c,
+  author    = {Jia, Y. and Dou, H. and Cao, S. and Zan, H.},
+  title     = {Speaker Identification and Its Application to Social Network Construction for Chinese Novels},
+  journal   = {International Journal of Asian Language Processing},
+  year      = {2020},
+  volume    = {30},
+  number    = {04},
+  pages     = {2050018},
+  doi       = {10.1142/s2717554520500186},
+  owner     = {Vincent},
+  timestamp = {2021.06.12},
+}
+
 @InProceedings{Jiang2007,
   author    = {Jiang, H. and Fels, S. and Little, J. J.},
   title     = {A Linear Programming Approach for Multiple Object Tracking},
